syntax = "proto3";

package logapi;
option go_package = "github.com/Saumya40-codes/LogsGO/api/grpc/pb;logapi";

service LogIngestor {
    rpc UploadLog(LogEntry) returns (UploadResponse);
    rpc UploadLogs(LogBatch) returns (UploadResponse);
}

message LogEntry {
  string service = 1;
  string level = 2;
  string message = 3;
  int64 timestamp = 4;
}

message LogBatch {
  repeated LogEntry entries = 1;
}

message UploadResponse {
  bool success = 1;
}

message Series {
  LogEntry entry  = 1;
  uint64   count  = 2;
}

message SeriesBatch {
  repeated Series entries = 1;
}